--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +7,63 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>BuildStore</h1>
-    <p>Ваш надежный партнер в мире разработки</p>
+  <header class="header">
+    <div class="logo"><img src="assets/logo.svg" alt="BuildStore Logo"></div>
+    <a href="#" class="sign-in">Sign in</a>
   </header>
 
   <main>
-    <section>
-      <h2>О нас</h2>
-      <p>Мы помогаем разработчикам создавать качественные приложения.</p>
-      <img src="assets/logo.svg" alt="Логотип BuildStore">
+    <section class="hero">
+      <h1>Safe and Trustworthy<br><span class="alt">Alternative App Store for iOS</span></h1>
+      <p class="desc">Over 800 apps available — sideload your favorite apps like: Emulators, Media, Social media, and more!</p>
+      <div class="hero-dots">
+        <span></span><span></span><span></span>
+      </div>
     </section>
 
-    <section>
-      <h2>Наши услуги</h2>
-      <p>Разработка, тестирование и поддержка ваших проектов.</p>
+    <section class="feature">
+      <h2>Unlimited Movies and Shows</h2>
+      <div class="gallery">
+        <img src="assets/movies/movie1.png" alt="Movie 1">
+        <img src="assets/movies/movie2.png" alt="Movie 2">
+      </div>
+      <p class="feature-desc">Enjoy the latest hits on your iPhone</p>
+      <a href="#" class="btn">WATCH NOW</a>
+    </section>
+
+    <section class="feature">
+      <h2>Dive into Retro Emulators World</h2>
+      <div class="gallery">
+        <img src="assets/emulator1.jpg" alt="Emulator 1">
+        <img src="assets/emulator2.jpg" alt="Emulator 2">
+      </div>
+      <p class="feature-desc">Enjoy first ever Cart Mario game on NDS emulator</p>
+      <a href="#" class="btn">PLAY NOW</a>
+    </section>
+
+    <section class="feature">
+      <h2>Enjoy unlocked premium apps</h2>
+      <div class="gallery">
+        <img src="assets/premium1.jpg" alt="Premium 1">
+        <img src="assets/premium2.jpg" alt="Premium 2">
+      </div>
+      <p class="feature-desc">Make fantastic photos like a pro. 50+ professional AI presets.</p>
+      <a href="#" class="btn">UNLOCK NOW</a>
+    </section>
+
+    <section class="feature">
+      <h2>Adult content on your iPhone</h2>
+      <div class="gallery">
+        <img src="assets/adult1.jpg" alt="Adult 1">
+        <img src="assets/adult2.jpg" alt="Adult 2">
+      </div>
+      <p class="feature-desc">A private and secure way to watch videos from all major adult platforms. No ads, no tracking.</p>
+      <a href="#" class="btn">ENJOY NOW</a>
     </section>
   </main>
 
-  <footer>
-    <p>&copy; 2023 BuildStore. Все права защищены.</p>
+  <footer class="footer">
+    <p>&copy; 2023 BuildStore. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
