Images for galleries

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
     <section class="feature">
       <h2>Unlimited Movies and Shows</h2>
       <div class="gallery">
-        <img src="assets/movies/movie1.png" alt="Movie 1">
-        <img src="assets/movies/movie2.png" alt="Movie 2">
+        <img src="assets/movies/movie_01.png" alt="Movie 1">
+        <img src="assets/movies/movie_02.png" alt="Movie 2">
+        <img src="assets/movies/movie_03.png" alt="Movie 3">
+        <img src="assets/movies/movie_04.png" alt="Movie 4">
+        <img src="assets/movies/movie_05.png" alt="Movie 5">
+        <img src="assets/movies/movie_06.png" alt="Movie 6">
+        <img src="assets/movies/movie_07.png" alt="Movie 7">
+        
       </div>
       <p class="feature-desc">Enjoy the latest hits on your iPhone</p>
       <a href="#" class="btn">WATCH NOW</a>
@@ -34,8 +40,11 @@
     <section class="feature">
       <h2>Dive into Retro Emulators World</h2>
       <div class="gallery">
-        <img src="assets/emulator1.jpg" alt="Emulator 1">
-        <img src="assets/emulator2.jpg" alt="Emulator 2">
+        <img src="assets/retro/retro_01.png" alt="Emulator 1">
+        <img src="assets/retro/retro_02.png" alt="Emulator 2">
+        <img src="assets/retro/retro_03.png" alt="Emulator 3">
+        <img src="assets/retro/retro_04.png" alt="Emulator 4">
+        <img src="assets/retro/retro_05.png" alt="Emulator 5">
       </div>
       <p class="feature-desc">Enjoy first ever Cart Mario game on NDS emulator</p>
       <a href="#" class="btn">PLAY NOW</a>
@@ -44,8 +53,14 @@
     <section class="feature">
       <h2>Enjoy unlocked premium apps</h2>
       <div class="gallery">
-        <img src="assets/premium1.jpg" alt="Premium 1">
-        <img src="assets/premium2.jpg" alt="Premium 2">
+        <img src="assets/premium/premium_01.png" alt="Movie 1">
+        <img src="assets/premium/premium_02.png" alt="Movie 2">
+        <img src="assets/premium/premium_03.png" alt="Movie 3">
+        <img src="assets/premium/premium_04.png" alt="Movie 4">
+        <img src="assets/premium/premium_05.png" alt="Movie 5">
+        <img src="assets/premium/premium_06.png" alt="Movie 6">
+        <img src="assets/premium/premium_07.png" alt="Movie 7">
+        <img src="assets/premium/premium_08.png" alt="Movie 8">
       </div>
       <p class="feature-desc">Make fantastic photos like a pro. 50+ professional AI presets.</p>
       <a href="#" class="btn">UNLOCK NOW</a>
@@ -54,8 +69,11 @@
     <section class="feature">
       <h2>Adult content on your iPhone</h2>
       <div class="gallery">
-        <img src="assets/adult1.jpg" alt="Adult 1">
-        <img src="assets/adult2.jpg" alt="Adult 2">
+        <img src="assets/adult/adult_01.png" alt="Adult 1">
+        <img src="assets/adult/adult_02.png" alt="Adult 2">
+        <img src="assets/adult/adult_03.png" alt="Adult 3">
+        <img src="assets/adult/adult_04.png" alt="Adult 4">
+        <img src="assets/adult/adult_05.png" alt="Adult 5">
       </div>
       <p class="feature-desc">A private and secure way to watch videos from all major adult platforms. No ads, no tracking.</p>
       <a href="#" class="btn">ENJOY NOW</a>
