Updated year of copyright

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </main>
 
   <footer class="footer">
-    <p>&copy; 2023 BuildStore. All rights reserved.</p>
+    <p>&copy; 2012-<span id="year"></span> BuildStore. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
