Fixied URIs for images

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <section class="feature">
       <h2>Enjoy unlocked premium apps</h2>
       <div class="gallery">
-        <img src="assets/premium/premium_01.png" alt="Movie 1">
-        <img src="assets/premium/premium_02.png" alt="Movie 2">
-        <img src="assets/premium/premium_03.png" alt="Movie 3">
-        <img src="assets/premium/premium_04.png" alt="Movie 4">
-        <img src="assets/premium/premium_05.png" alt="Movie 5">
-        <img src="assets/premium/premium_06.png" alt="Movie 6">
-        <img src="assets/premium/premium_07.png" alt="Movie 7">
-        <img src="assets/premium/premium_08.png" alt="Movie 8">
+        <img src="assets/premium_apps/premium_apps_01.png" alt="Premium 1">
+        <img src="assets/premium_apps/premium_apps_02.png" alt="Premium 2">
+        <img src="assets/premium_apps/premium_apps_03.png" alt="Premium 3">
+        <img src="assets/premium_apps/premium_apps_04.png" alt="Premium 4">
+        <img src="assets/premium_apps/premium_apps_05.png" alt="Premium 5">
+        <img src="assets/premium_apps/premium_apps_06.png" alt="Premium 6">
+        <img src="assets/premium_apps/premium_apps_07.png" alt="Premium 7">
+        <img src="assets/premium_apps/premium_apps_08.png" alt="Premium 8">
       </div>
       <p class="feature-desc">Make fantastic photos like a pro. 50+ professional AI presets.</p>
       <a href="#" class="btn">UNLOCK NOW</a>
