step 3 - effects and other

--- a/index.html
+++ b/index.html
@@ -8,16 +8,25 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo"><img src="assets/logo.svg" alt="BuildStore Logo"></div>
-    <a href="#" class="sign-in">Sign in</a>
+    <div class="header-container">
+      <div class="logo"><img src="assets/logo.svg" alt="BuildStore Logo"></div>
+      <a href="#" class="sign-in">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"/>
+        </svg>
+        Sign in
+      </a>
+    </div>
   </header>
 
   <main>
     <section class="hero">
-      <h1>Safe and Trustworthy<br><span class="alt">Alternative App Store for iOS</span></h1>
-      <p class="desc">Over 800 apps available — sideload your favorite apps like: Emulators, Media, Social media, and more!</p>
-      <div class="hero-dots">
-        <span></span><span></span><span></span>
+      <div class="hero-container">
+        <h1>Safe and Trustworthy<br><span class="alt">Alternative App Store for iOS</span></h1>
+        <p class="desc">Over 800 apps available — sideload your favorite apps like: Emulators, Media, Social media, and more!</p>
+        <div class="hero-dots">
+          <span></span><span></span><span></span>
+        </div>
       </div>
     </section>
 
@@ -34,7 +43,12 @@
         
       </div>
       <p class="feature-desc">Enjoy the latest hits on your iPhone</p>
-      <a href="#" class="btn">WATCH NOW</a>
+      <a href="#" class="btn">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M8 5v14l11-7z"/>
+        </svg>
+        WATCH NOW
+      </a>
     </section>
 
     <section class="feature">
@@ -46,7 +60,12 @@
         <img src="assets/retro/retro_04.png" alt="Emulator 4">
       </div>
       <p class="feature-desc">Enjoy first ever Cart Mario game on NDS emulator</p>
-      <a href="#" class="btn">PLAY NOW</a>
+      <a href="#" class="btn">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M7,6V18L18,12M9,8.5V15.5L15.5,12L9,8.5Z"/>
+        </svg>
+        PLAY NOW
+      </a>
     </section>
 
     <section class="feature">
@@ -56,7 +75,12 @@
         <img src="assets/premium_apps/premium_apps_02.png" alt="Premium 2">
       </div>
       <p class="feature-desc">Make fantastic photos like a pro. 50+ professional AI presets.</p>
-      <a href="#" class="btn">UNLOCK NOW</a>
+      <a href="#" class="btn">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10A2,2 0 0,1 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"/>
+        </svg>
+        UNLOCK NOW
+      </a>
     </section>
 
     <section class="feature">
@@ -69,7 +93,12 @@
         <img src="assets/adult/adult_05.png" alt="Adult 5">
       </div>
       <p class="feature-desc">A private and secure way to watch videos from all major adult platforms. No ads, no tracking.</p>
-      <a href="#" class="btn">ENJOY NOW</a>
+      <a href="#" class="btn">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
+        </svg>
+        ENJOY NOW
+      </a>
     </section>
   </main>
 
