fixed problems in layout

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <section class="hero">
       <div class="hero-container">
-        <h1>Safe and Trustworthy<br><span class="alt">Alternative App Store for iOS</span></h1>
+        <h1>Safe and Trustworthy<br><span class="alt">Alternative<wbr> App Store for iOS</span></h1>
         <p class="desc">Over 800 apps available — sideload your favorite apps like: Emulators, Media, Social media, and more!</p>
         <div class="hero-dots">
           <span></span><span></span><span></span>
