updated cta and headers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="feature">
-      <h2>Unlimited Movies and Shows</h2>
+      <h2>🎬 Movies & TV Shows</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -57,17 +57,17 @@
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
         </div>
       </div>
-      <p class="feature-desc">Enjoy the latest hits on your iPhone</p>
+      <p class="feature-desc">Stream the latest movies and TV shows directly on your iPhone or iPad</p>
       <a href="#" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M8 5v14l11-7z"/>
         </svg>
-        WATCH NOW
+        SIGN UP
       </a>
     </section>
 
     <section class="feature">
-      <h2>Dive into Retro Emulators World</h2>
+      <h2>🎮 Retro Gaming</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -88,17 +88,17 @@
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
         </div>
       </div>
-      <p class="feature-desc">Enjoy first ever Cart Mario game on NDS emulator</p>
+      <p class="feature-desc">Play classic console games with advanced emulators</p>
       <a href="#" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M7,6V18L18,12M9,8.5V15.5L15.5,12L9,8.5Z"/>
         </svg>
-        PLAY NOW
+        SIGN UP
       </a>
     </section>
 
     <section class="feature">
-      <h2>Enjoy unlocked premium apps</h2>
+      <h2>💎 Premium Apps</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -115,17 +115,17 @@
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
         </div>
       </div>
-      <p class="feature-desc">Make fantastic photos like a pro. 50+ professional AI presets.</p>
+      <p class="feature-desc">Unlock pro features in your favorite apps</p>
       <a href="#" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10A2,2 0 0,1 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"/>
         </svg>
-        UNLOCK NOW
+        SIGN UP
       </a>
     </section>
 
     <section class="feature">
-      <h2>Adult content on your iPhone</h2>
+      <h2>🔞 Adult Content 18+</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -148,12 +148,12 @@
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
         </div>
       </div>
-      <p class="feature-desc">A private and secure way to watch videos from all major adult platforms. No ads, no tracking.</p>
+      <p class="feature-desc">Private and secure access to adult entertainment</p>
       <a href="#" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
         </svg>
-        ENJOY NOW
+        SIGN UP
       </a>
     </section>
   </main>
