--- a/index.html
+++ b/index.html
@@ -124,37 +124,45 @@
       </a>
     </section>
 
-    <section class="feature">
+    <section class="feature adult-section">
       <h2>🔞 Adult Content 18+</h2>
-      <div class="glide gallery-glide">
-        <div class="glide__track" data-glide-el="track">
-          <ul class="glide__slides">
-            <li class="glide__slide"><img src="assets/adult/adult_01.webp" alt="Adult 1" loading="lazy" decoding="async"></li>
-            <li class="glide__slide"><img src="assets/adult/adult_02.webp" alt="Adult 2" loading="lazy" decoding="async"></li>
-            <li class="glide__slide"><img src="assets/adult/adult_03.webp" alt="Adult 3" loading="lazy" decoding="async"></li>
-            <li class="glide__slide"><img src="assets/adult/adult_04.webp" alt="Adult 4" loading="lazy" decoding="async"></li>
-            <li class="glide__slide"><img src="assets/adult/adult_05.webp" alt="Adult 5" loading="lazy" decoding="async"></li>
-          </ul>
+      <div class="age-gate">
+        <div class="glide gallery-glide blurred" id="adult-gallery">
+          <div class="glide__track" data-glide-el="track">
+            <ul class="glide__slides">
+              <li class="glide__slide"><img src="assets/adult/adult_01.webp" alt="Adult 1" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_02.webp" alt="Adult 2" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_03.webp" alt="Adult 3" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_04.webp" alt="Adult 4" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_05.webp" alt="Adult 5" loading="lazy" decoding="async"></li>
+            </ul>
+          </div>
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
+            <button class="glide__bullet" data-glide-dir="=4"></button>
+          </div>
+          <div class="glide__arrows" data-glide-el="controls">
+            <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
+            <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
+          </div>
         </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
-          <button class="glide__bullet" data-glide-dir="=2"></button>
-          <button class="glide__bullet" data-glide-dir="=3"></button>
-          <button class="glide__bullet" data-glide-dir="=4"></button>
+        <div class="age-overlay" id="age-overlay">
+          <div class="age-content">
+            <p>This content is restricted to users 18+</p>
+            <button class="btn btn-ghost" onclick="showAdultContent()">I am 18 or older</button>
+          </div>
         </div>
-        <div class="glide__arrows" data-glide-el="controls">
-          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
-          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
-        </div>
+        <p class="feature-desc">Private and secure access to adult entertainment</p>
+        <a href="#" class="btn">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
+          </svg>
+          SIGN UP
+        </a>
       </div>
-      <p class="feature-desc">Private and secure access to adult entertainment</p>
-      <a href="#" class="btn">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-          <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
-        </svg>
-        SIGN UP
-      </a>
     </section>
   </main>
 
@@ -164,5 +172,12 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/glide.min.js"></script>
   <script src="script.js"></script>
+  <script>
+    // Adult content age gate
+    function showAdultContent() {
+      document.getElementById('adult-gallery').classList.remove('blurred');
+      document.getElementById('age-overlay').style.display = 'none';
+    }
+  </script>
 </body>
 </html> 
