added links with utms

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="header-container">
       <div class="logo"><img src="assets/logo.svg" alt="BuildStore Logo"></div>
-      <a href="#" class="sign-in">
+      <a href="https://builds.io/auth/sign-in?utm_source=home_page&utm_medium=referral&utm_campaign=hp062025&utm_content=header_signin" class="sign-in">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"/>
         </svg>
@@ -58,7 +58,7 @@
         </div>
       </div>
       <p class="feature-desc">Stream the latest movies and TV shows directly on your iPhone or iPad</p>
-      <a href="#" class="btn">
+      <a href="https://builds.io/auth/sign-up?utm_source=home_page&utm_medium=referral&utm_campaign=hp062025&utm_content=movies_signup" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M8 5v14l11-7z"/>
         </svg>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <p class="feature-desc">Play classic console games with advanced emulators</p>
-      <a href="#" class="btn">
+      <a href="https://builds.io/auth/sign-up?utm_source=home_page&utm_medium=referral&utm_campaign=hp062025&utm_content=gaming_signup" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M7,6V18L18,12M9,8.5V15.5L15.5,12L9,8.5Z"/>
         </svg>
@@ -116,7 +116,7 @@
         </div>
       </div>
       <p class="feature-desc">Unlock pro features in your favorite apps</p>
-      <a href="#" class="btn">
+      <a href="https://builds.io/auth/sign-up?utm_source=home_page&utm_medium=referral&utm_campaign=hp062025&utm_content=premium_signup" class="btn">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10A2,2 0 0,1 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"/>
         </svg>
@@ -156,7 +156,7 @@
           </div>
         </div>
         <p class="feature-desc">Private and secure access to adult entertainment</p>
-        <a href="#" class="btn">
+        <a href="https://builds.io/auth/sign-up?utm_source=home_page&utm_medium=referral&utm_campaign=hp062025&utm_content=adult_signup" class="btn">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
             <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
           </svg>
