--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="feature">
-      <h2>🎬 Movies & TV Shows</h2>
+      <h2>Movies & TV Shows</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -43,18 +43,18 @@
             <li class="glide__slide"><img src="assets/movies/movie_07.webp" alt="Movie 7" loading="lazy" decoding="async"></li>
           </ul>
         </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
-          <button class="glide__bullet" data-glide-dir="=2"></button>
-          <button class="glide__bullet" data-glide-dir="=3"></button>
-          <button class="glide__bullet" data-glide-dir="=4"></button>
-          <button class="glide__bullet" data-glide-dir="=5"></button>
-          <button class="glide__bullet" data-glide-dir="=6"></button>
-        </div>
         <div class="glide__arrows" data-glide-el="controls">
           <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
+            <button class="glide__bullet" data-glide-dir="=4"></button>
+            <button class="glide__bullet" data-glide-dir="=5"></button>
+            <button class="glide__bullet" data-glide-dir="=6"></button>
+          </div>
         </div>
       </div>
       <p class="feature-desc">Stream the latest movies and TV shows directly on your iPhone or iPad</p>
@@ -67,7 +67,7 @@
     </section>
 
     <section class="feature">
-      <h2>🎮 Retro Gaming</h2>
+      <h2>Retro Gaming</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
@@ -75,17 +75,31 @@
             <li class="glide__slide"><img src="assets/retro/retro_02.webp" alt="Emulator 2" loading="lazy" decoding="async"></li>
             <li class="glide__slide"><img src="assets/retro/retro_03.webp" alt="Emulator 3" loading="lazy" decoding="async"></li>
             <li class="glide__slide"><img src="assets/retro/retro_04.webp" alt="Emulator 4" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_05.webp" alt="Emulator 5" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_06.webp" alt="Emulator 6" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_07.webp" alt="Emulator 7" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_08.webp" alt="Emulator 8" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_09.webp" alt="Emulator 9" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_10.webp" alt="Emulator 10" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/retro/retro_11.webp" alt="Emulator 11" loading="lazy" decoding="async"></li>
           </ul>
-        </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
-          <button class="glide__bullet" data-glide-dir="=2"></button>
-          <button class="glide__bullet" data-glide-dir="=3"></button>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
           <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
+            <button class="glide__bullet" data-glide-dir="=4"></button>
+            <button class="glide__bullet" data-glide-dir="=5"></button>
+            <button class="glide__bullet" data-glide-dir="=6"></button>
+            <button class="glide__bullet" data-glide-dir="=7"></button>
+            <button class="glide__bullet" data-glide-dir="=8"></button>
+            <button class="glide__bullet" data-glide-dir="=9"></button>
+            <button class="glide__bullet" data-glide-dir="=10"></button>
+          </div>
         </div>
       </div>
       <p class="feature-desc">Play classic console games with advanced emulators</p>
@@ -98,21 +112,37 @@
     </section>
 
     <section class="feature">
-      <h2>💎 Premium Apps</h2>
+      <h2>Premium Apps</h2>
       <div class="glide gallery-glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             <li class="glide__slide"><img src="assets/premium_apps/premium_apps_01.webp" alt="Premium 1" loading="lazy" decoding="async"></li>
             <li class="glide__slide"><img src="assets/premium_apps/premium_apps_02.webp" alt="Premium 2" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_03.webp" alt="Premium 3" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_04.webp" alt="Premium 4" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_05.webp" alt="Premium 5" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_06.webp" alt="Premium 6" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_07.webp" alt="Premium 7" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_08.webp" alt="Premium 8" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_09.webp" alt="Premium 9" loading="lazy" decoding="async"></li>
+            <li class="glide__slide"><img src="assets/premium_apps/premium_apps_10.webp" alt="Premium 10" loading="lazy" decoding="async"></li>
           </ul>
-        </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
           <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
           <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
+          <div class="glide__bullets" data-glide-el="controls[nav]">
+            <button class="glide__bullet" data-glide-dir="=0"></button>
+            <button class="glide__bullet" data-glide-dir="=1"></button>
+            <button class="glide__bullet" data-glide-dir="=2"></button>
+            <button class="glide__bullet" data-glide-dir="=3"></button>
+            <button class="glide__bullet" data-glide-dir="=4"></button>
+            <button class="glide__bullet" data-glide-dir="=5"></button>
+            <button class="glide__bullet" data-glide-dir="=6"></button>
+            <button class="glide__bullet" data-glide-dir="=7"></button>
+            <button class="glide__bullet" data-glide-dir="=8"></button>
+            <button class="glide__bullet" data-glide-dir="=9"></button>
+          </div>
         </div>
       </div>
       <p class="feature-desc">Unlock pro features in your favorite apps</p>
@@ -125,7 +155,7 @@
     </section>
 
     <section class="feature adult-section">
-      <h2>🔞 Adult Content 18+</h2>
+      <h2>Adult Content 18+</h2>
       <div class="age-gate">
         <div class="glide gallery-glide blurred" id="adult-gallery">
           <div class="glide__track" data-glide-el="track">
@@ -135,18 +165,24 @@
               <li class="glide__slide"><img src="assets/adult/adult_03.webp" alt="Adult 3" loading="lazy" decoding="async"></li>
               <li class="glide__slide"><img src="assets/adult/adult_04.webp" alt="Adult 4" loading="lazy" decoding="async"></li>
               <li class="glide__slide"><img src="assets/adult/adult_05.webp" alt="Adult 5" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_06.webp" alt="Adult 6" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_07.webp" alt="Adult 7" loading="lazy" decoding="async"></li>
+              <li class="glide__slide"><img src="assets/adult/adult_08.webp" alt="Adult 8" loading="lazy" decoding="async"></li>
             </ul>
-          </div>
-          <div class="glide__bullets" data-glide-el="controls[nav]">
-            <button class="glide__bullet" data-glide-dir="=0"></button>
-            <button class="glide__bullet" data-glide-dir="=1"></button>
-            <button class="glide__bullet" data-glide-dir="=2"></button>
-            <button class="glide__bullet" data-glide-dir="=3"></button>
-            <button class="glide__bullet" data-glide-dir="=4"></button>
           </div>
           <div class="glide__arrows" data-glide-el="controls">
             <button class="glide__arrow glide__arrow--left" data-glide-dir="<">‹</button>
             <button class="glide__arrow glide__arrow--right" data-glide-dir=">">›</button>
+            <div class="glide__bullets" data-glide-el="controls[nav]">
+              <button class="glide__bullet" data-glide-dir="=0"></button>
+              <button class="glide__bullet" data-glide-dir="=1"></button>
+              <button class="glide__bullet" data-glide-dir="=2"></button>
+              <button class="glide__bullet" data-glide-dir="=3"></button>
+              <button class="glide__bullet" data-glide-dir="=4"></button>
+              <button class="glide__bullet" data-glide-dir="=5"></button>
+              <button class="glide__bullet" data-glide-dir="=6"></button>
+              <button class="glide__bullet" data-glide-dir="=7"></button>
+            </div>
           </div>
         </div>
         <div class="age-overlay" id="age-overlay">
