убрал плашки из-под галлерей, упростил ещё дизайн

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M8 5v14l11-7z"/>
         </svg>
-        SIGN UP
+        Sign up
       </a>
     </section>
 
@@ -107,7 +107,7 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M7,6V18L18,12M9,8.5V15.5L15.5,12L9,8.5Z"/>
         </svg>
-        SIGN UP
+        Sign up
       </a>
     </section>
 
@@ -150,7 +150,7 @@
         <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
           <path d="M18,8A2,2 0 0,1 20,10V20A2,2 0 0,1 18,22H6A2,2 0 0,1 4,20V10A2,2 0 0,1 6,8H7V6A5,5 0 0,1 12,1A5,5 0 0,1 17,6V8H18M12,3A3,3 0 0,0 9,6V8H15V6A3,3 0 0,0 12,3Z"/>
         </svg>
-        SIGN UP
+        Sign up
       </a>
     </section>
 
@@ -196,7 +196,7 @@
           <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
             <path d="M12,2L14.5,8.5L22,9.5L17,14.5L18.5,22L12,18.5L5.5,22L7,14.5L2,9.5L9.5,8.5L12,2Z"/>
           </svg>
-          SIGN UP
+          Sign up
         </a>
       </div>
     </section>
